add hero section

--- a/src/card.css
+++ b/src/card.css
@@ -5,7 +5,8 @@
   gap: 1.25rem;
   overflow-x: scroll;
   scroll-behavior: smooth;
-  scrollbar-color: dark;
+  scrollbar-color: rgb(60, 60, 60) white;
+  scrollbar-width: thin;
 }
 
 .card {
