--- a/src/hero.css
+++ b/src/hero.css
@@ -53,3 +53,49 @@ h1 {
   width: 100%;
   height: 100%;
 }
+
+.card-badge {
+  position: absolute;
+  margin: 0.5rem 0.5rem;
+  font-size: larger;
+  background-color: white;
+  color: black;
+  padding: 5px 7px;
+  border-radius: 3%;
+}
+
+@keyframes bounce {
+  0%,
+  10%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-0.5rem);
+  }
+  60% {
+    transform: translateY(-0.2rem);
+  }
+}
+
+.hero-card:hover .card-badge {
+  background-color: rgba(255, 255, 255, 0.879);
+  box-shadow: 0rem 0rem 0.3rem 0.3rem #3d315b;
+  font-size: large;
+  animation: bounce 2s ease 0s;
+}
+
+.hero-card {
+  cursor: pointer;
+}
+
+.hero-box:hover {
+  color: #987284;
+}
+
+.hero-box2:hover {
+  color: #987284;
+}
