--- a/src/header.css
+++ b/src/header.css
@@ -50,36 +50,12 @@
   height: 2.3em;
   margin: 0.5em;
   background: white;
-  color: rgb(60, 60, 60);
   border: none;
-  border-radius: 0.625em;
   font-size: 1.2rem;
   font-weight: lighter;
   cursor: pointer;
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
 }
 
 button:hover {
-  color: white;
-}
-
-button:after {
-  content: "";
-  background: rgba(0, 0, 0, 0.572);
-  position: absolute;
-  z-index: -1;
-  left: -10%;
-  right: -10%;
-  top: 0;
-  bottom: 0;
-  transform: skewX(-45deg) scale(0, 1);
-  transition: all 0.5s;
-}
-
-button:hover:after {
-  transform: skewX(-45deg) scale(1, 1);
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
+  color: #987284;
 }
