--- a/src/hero2.css
+++ b/src/hero2.css
@@ -5,3 +5,37 @@
   font-style: normal;
   font-variation-settings: "wdth" 100;
 }
+
+.hero-2 {
+  margin: 2rem 4rem;
+  margin-top: 8rem;
+}
+
+.hero-2-title {
+  margin-bottom: 2rem;
+}
+
+.hero-video {
+  display: inline-flex;
+  height: auto;
+}
+
+.video-box {
+  background-color: rgba(245, 245, 245);
+  width: 100%;
+  color: rgb(0, 0, 0);
+  font-size: 1.7rem;
+  font-weight: 300;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.video-box:hover {
+  color: #987284;
+  cursor: pointer;
+}
+
+.arrow {
+  padding-left: 1rem;
+}
