--- a/src/hero3.css
+++ b/src/hero3.css
@@ -14,3 +14,25 @@
 .hero-3-title {
   margin-bottom: 2rem;
 }
+
+.hero-3-photos {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 1.2rem;
+  height: 50vh;
+  width: 100%;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+}
+
+.hero-3-card:hover .card-badge {
+  background-color: white;
+  border: 0.1rem solid rgba(0, 0, 0, 0.864);
+}
+
+.hero-3-card {
+  cursor: pointer;
+}
