--- a/styles/hero3.css
+++ b/styles/hero3.css
@@ -13,6 +13,7 @@
 
 .hero-3-title {
   margin-bottom: 2rem;
+  position: relative;
 }
 
 .hero-3-photos {
@@ -27,12 +28,29 @@
   width: 100%;
   height: 100%;
 }
+.card1-badge {
+  position: absolute;
+  bottom: 10%;
+  left: 25%;
+  right: 25%;
+  text-align: center;
+  width: inherit;
+  margin: 0.5rem 0.5rem;
+  font-size: 1rem;
+  font-weight: light;
+  background-color: rgba(255, 255, 255, 0.839);
+  color: black;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+  border: 0.05rem solid rgba(0, 0, 0, 0.462);
+}
 
-.hero-3-card:hover .card-badge {
-  background-color: white;
+.hero-3-card:hover .card1-badge {
+  background-color: rgba(255, 255, 255, 0.946);
   border: 0.1rem solid rgba(0, 0, 0, 0.864);
 }
 
 .hero-3-card {
   cursor: pointer;
+  position: relative;
 }
