--- a/styles/header.css
+++ b/styles/header.css
@@ -45,7 +45,7 @@
   margin-left: 10%;
 }
 
-.btn {
+.button {
   width: 5em;
   height: 2.3em;
   margin: 0.5em;
@@ -56,6 +56,7 @@
   cursor: pointer;
 }
 
-button:hover {
+button:hover,
+.bi1:hover {
   color: #987284;
 }
