--- a/styles/header.css
+++ b/styles/header.css
@@ -41,22 +41,30 @@
   outline: none;
 }
 
-.header-title {
+.header-buttons {
+  display: flex;
+  justify-content: end;
   margin-left: 10%;
 }
 
 .button {
   width: 5em;
   height: 2.3em;
-  margin: 0.5em;
+  margin: 0.3em;
   background: white;
   border: none;
   font-size: 1.2rem;
   font-weight: lighter;
   cursor: pointer;
+  transition: ease-in-out 0.3s;
 }
 
 button:hover,
 .bi1:hover {
   color: #987284;
+  transition: ease-in-out 0.3s;
+}
+
+.bi1 {
+  transition: ease-in-out 0.3s;
 }
