--- a/styles/card.css
+++ b/styles/card.css
@@ -12,7 +12,7 @@
 .cards {
   padding-top: 1rem;
   width: 11rem;
-  height: 30vh;
+  height: 15rem;
   font-size: 1.2rem;
   flex: 0 0 auto;
   display: flex;
